# skillvector-engine

./: .env.example  .gitignore  .vercelignore  Procfile  README.md  pyproject.toml  railway.json  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
api/: auth.py  dashboard.py  main.py  middleware.py  models.py  stripe_routes.py
app/: streamlit_app.py
app/components/: ui_helpers.py
app/pages/: admin.py  analyze.py  dashboard.py  history.py  learning_path.py
app/styles/: theme.css
docs/: index.html
frontend/: .env.local  .env.production  .gitignore  nixpacks.toml  package-lock.json  package.json  railway.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
frontend/components/: AuthModal.tsx  Dashboard.tsx  ErrorBoundary.tsx  EvidencePanel.tsx  HealthBanner.tsx  LearningPath.tsx  PaywallModal.tsx  ProfilePanel.tsx  RelatedJobs.tsx  ScoreRing.tsx  Skeleton.tsx  SkillGapGrid.tsx  UploadZone.tsx  UsageBadge.tsx
frontend/lib/: api.ts  auth-context.tsx  demo-data.ts  types.ts  use-geo-price.ts
frontend/public/: robots.txt
src/: config.py  health.py  test_embeddings.py  test_engine.py  test_evidence_engine.py  test_full_pipeline.py  test_learning_path.py  test_rag.py  test_retrieval.py  test_similarity.py  test_skill_planner.py
src/analytics/: daily_stats.py  skill_trends.py  tracker.py
src/auth/: auth_service.py
src/cache/: __init__.py  analysis_cache.py
src/data/: sample_jobs.json
src/db/: database.py  models.py
src/embeddings/: embedding_service.py
src/engine/: skill_gap_engine.py
src/evidence/: evidence_engine.py  interview_generator.py  project_generator.py  project_templates.py  rubric.py
src/graph/: evidence_catalog.py  first_skill_graph.cypher  neo4j_client.py  seed_skills.py  skill_planner.py
src/jobs/: __init__.py  job_data.py  rag_retriever.py  seed_jobs.py
src/language/: __init__.py  translator.py
src/llm/: gap_agent.py  rag_prompt.py
src/pipeline/: full_pipeline.py
src/rag/: ingest_jobs.py  job_embedder.py  rag_engine.py  retrieve_jobs.py  retriever.py
src/reports/: pdf_generator.py
tests/: conftest.py  test_analytics.py  test_api.py  test_auth.py  test_embeddings.py  test_engine.py  test_errors.py  test_evidence.py  test_health.py  test_interview_generator.py  test_pipeline.py  test_project_generator.py  test_rag.py  test_rubric.py  test_seed_skills.py  test_similarity.py  test_skill_planner.py  test_skill_trends.py  test_stripe.py  test_usage.py
(+9 files in other folders)
